@@ -26,7 +26,38 @@ cleanup() {
 }
 trap cleanup EXIT
 
-cat > "$TMP_DIR/deps.edn" <<EOF
+cat > "$TMP_DIR/deps-java.edn" <<EOF
+{:mvn/local-repo "$ROOT/build/m2"
+ :deps {dev.vevdb/vev-java {:mvn/version "$VERSION"}}
+ :aliases {:run {:jvm-opts ["--enable-preview"
+                            "--enable-native-access=ALL-UNNAMED"]}}}
+EOF
+
+(
+  cd "$TMP_DIR"
+  clojure -Sdeps "$(cat deps-java.edn)" -M:run -e "(import '[dev.vevdb.vev Vev Vev\$TxReportListener])
+(with-open [vev (Vev/load)
+            conn (.createConn vev)]
+  (let [seen (atom 0)]
+    (with-open [listener (.listen conn \"java-listener\"
+                                  (reify Vev\$TxReportListener
+                                    (accept [_ report]
+                                      (when (.contains (str report) \":user/listener\")
+                                        (swap! seen inc)))))]
+      (.transact conn \"[[:db/add 1 :user/listener \\\"heard\\\"]]\")
+      (assert (= 1 @seen)))
+    (.transact conn \"[[:db/add 1 :user/listener \\\"after-close\\\"]]\")
+    (assert (= 1 @seen)))
+  (.transact conn \"[{:db/id 1 :user/name \\\"Ada\\\"}]\")
+  (with-open [db (.db conn)]
+    (let [rows (.queryRows vev (java.util.Map/of
+                                 \"query\" \"[:find ?name :where [?e :user/name ?name]]\"
+                                 \"args\" (java.util.List/of db)))]
+      (assert (= [[\"Ada\"]] (vec (map vec rows))))))
+  (println :vev-java-package-ok))"
+)
+
+cat > "$TMP_DIR/deps-clj.edn" <<EOF
 {:mvn/local-repo "$ROOT/build/m2"
  :deps {dev.vevdb/vev-clj {:mvn/version "$VERSION"}}
  :aliases {:run {:jvm-opts ["--enable-preview"
@@ -35,11 +66,25 @@ EOF
 
 (
   cd "$TMP_DIR"
-  clojure -M:run -e "(require '[vev.core :as d])
+  clojure -Sdeps "$(cat deps-clj.edn)" -M:run -e "(require '[vev.core :as d])
 (let [conn (d/create-conn)]
-  (d/transact! conn [{:db/id 1 :user/name \"Ada\"}])
+  (let [seen (atom [])]
+    (with-open [listener (d/listen conn :clj-listener #(swap! seen conj (:tx-data %)))]
+      (d/transact conn [[:db/add 1 :user/listener \"heard\"]])
+      (assert (= 1 (count @seen))))
+    (d/transact conn [[:db/add 1 :user/listener \"after-close\"]])
+    (assert (= 1 (count @seen))))
+  (d/transact conn [{:db/id 1 :user/name \"Ada\"}])
   (assert (= #{[\"Ada\"]}
              (d/q '[:find ?name :where [?e :user/name ?name]]
                   (d/db conn))))
+  (with-open [fns (d/tx-fns conn {:user/set-name
+                                  (fn [db e name]
+                                    [[:db/add e :user/name name]])})]
+    (d/transact conn [[:db/add 100 :db/ident :user/set-name]])
+    (d/transact conn [[:user/set-name 2 \"Grace\"]] fns)
+    (assert (= #{[\"Grace\"]}
+               (d/q '[:find ?name :where [2 :user/name ?name]]
+                    (d/db conn)))))
   (println :vev-jvm-package-ok))"
 )
